fixed the scroll issue. Fixed button overlapping in editor pane

--- a/src/components/Editor.scss
+++ b/src/components/Editor.scss
@@ -5,7 +5,6 @@
 .editor-container {
     flex: 1;
     display: flex;
-    height: 100%;
     pre {
         border-radius: 1rem;
     }
@@ -24,6 +23,7 @@
         }
         .button-container {
             display: flex;
+            flex-wrap: wrap;
             button {
                 background: transparent;
                 border: 1px solid transparent;
